--- a/src/main/resources/mails/model.html
+++ b/src/main/resources/mails/model.html
@@ -3,16 +3,16 @@
 
 <head>
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]-->
     <!--[if !mso]><!-->
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
     <!--<![endif]-->
     <style>
         * {
@@ -112,11 +112,11 @@
                                             <tr>
                                                 <td class="column column-1" width="100%"
                                                     style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-                                                    <table th:if="${jssHeaderPicture!=null}" class="image_block block-1"
-                                                        width="100%" border="0" cellpadding="0" cellspacing="0"
-                                                        role="presentation"
+                                                    <table th:if="${jssHeaderPicture!=null || jssHeaderPlain!=null}"
+                                                        class="image_block block-1" width="100%" border="0"
+                                                        cellpadding="0" cellspacing="0" role="presentation"
                                                         style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
+                                                        <tr th:if="${jssHeaderPicture!=null}">
                                                             <td class="pad"
                                                                 style="padding-bottom:30px;padding-top:15px;width:100%;padding-right:0px;padding-left:0px;">
                                                                 <div class="alignment" align="center"
@@ -124,8 +124,18 @@
                                                                         src="picture.png"
                                                                         th:src="|cid:${jssHeaderPicture}|"
                                                                         style="display: block; height: auto; border: 0; width: 605px; max-width: 100%;"
-                                                                        width="605" alt="Burger Shop logo"
-                                                                        title="Burger Shop logo"></div>
+                                                                        width="605" alt="" title="" /></div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr th:if="${jssHeaderPicturePlain!=null}">
+                                                            <td class="pad"
+                                                                style="padding-bottom:30px;padding-top:15px;width:100%;padding-right:0px;padding-left:0px;">
+                                                                <div class="alignment" align="center"
+                                                                    style="line-height:10px"><img class="big"
+                                                                        src="picture.png"
+                                                                        th:src="@{classpath:${jssHeaderPicturePlain}}"
+                                                                        style="display: block; height: auto; border: 0; width: 605px; max-width: 100%;"
+                                                                        width="605" alt="" title="" /></div>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -151,7 +161,7 @@
                                                             <td class="pad"
                                                                 style="padding-left:10px;padding-right:10px;padding-top:15px;">
                                                                 <div style="font-family: Arial, sans-serif">
-                                                                    <div class
+                                                                    <div
                                                                         style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
@@ -174,8 +184,7 @@
                                                                     style="line-height:10px"><img class="big"
                                                                         src="sample.png" th:src="|cid:${headerPicture}|"
                                                                         style="display: block; height: auto; border: 0; width: 605px; max-width: 100%;"
-                                                                        width="605" alt="Image of three burgers"
-                                                                        title="Image of three burgers"></div>
+                                                                        width="605" alt="" title="" /></div>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -208,7 +217,7 @@
                                                             <td class="pad"
                                                                 style="padding-left:10px;padding-right:10px;padding-top:75px;">
                                                                 <div style="font-family: Arial, sans-serif">
-                                                                    <div class
+                                                                    <div
                                                                         style="font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
@@ -227,7 +236,7 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <div style="font-family: Arial, sans-serif">
-                                                                    <div class
+                                                                    <div
                                                                         style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                         <p th:if="${explaination!=null}"
                                                                             style="margin: 0; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
@@ -283,8 +292,7 @@
                                                                                             src="sample.png"
                                                                                             th:src="|cid:${qrCodePicture}|"
                                                                                             style="display: block; height: auto; border: 0;  "
-                                                                                            alt="Image of three burgers"
-                                                                                            title="Image of three burgers">
+                                                                                            alt="" title="" />
                                                                                     </div>
                                                                                 </td>
                                                                             </tr>
@@ -298,7 +306,7 @@
                                                                                             th:text="${asso.affaire.denomination}"></span><span
                                                                                             th:text="${asso.affaire.firstname}"></span>
                                                                                         <span
-                                                                                            th:text="${asso.affaire.lastname}"></span></span>
+                                                                                            th:text="${asso.affaire.lastname}"></span>
                                                                                     </td>
                                                                                     <td></td>
                                                                                 </tr>
@@ -445,7 +453,7 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <div style="font-family: Arial, sans-serif">
-                                                                    <div class
+                                                                    <div
                                                                         style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                         <p th:if="${explaination3!=null}"
                                                                             style="margin: 0; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
@@ -533,7 +541,7 @@
                                                                                         src="linkedin.png" width="32"
                                                                                         height="32" alt="Linkedin"
                                                                                         title="linkedin"
-                                                                                        style="display: block; height: auto; border: 0;"></a>
+                                                                                        style="display: block; height: auto; border: 0;" /></a>
                                                                             </td>
                                                                             <td style="padding:0 5px 0 5px;"><a
                                                                                     href="https://twitter.com/Jss_Journal"
@@ -542,7 +550,7 @@
                                                                                         src="twitter.png" width="32"
                                                                                         height="32" alt="Twitter"
                                                                                         title="twitter"
-                                                                                        style="display: block; height: auto; border: 0;"></a>
+                                                                                        style="display: block; height: auto; border: 0;" /></a>
                                                                             </td>
                                                                             <td style="padding:0 5px 0 5px;"><a
                                                                                     href="https://www.facebook.com/Journal.Special.des.Societes/?ref=hl"
@@ -551,7 +559,7 @@
                                                                                         src="facebook.png" width="32"
                                                                                         height="32" alt="Facebook"
                                                                                         title="facebook"
-                                                                                        style="display: block; height: auto; border: 0;"></a>
+                                                                                        style="display: block; height: auto; border: 0;" /></a>
                                                                             </td>
                                                                             <td style="padding:0 5px 0 5px;"><a
                                                                                     href="https://www.instagram.com/lejournalspecialdessocietes/"
@@ -560,7 +568,7 @@
                                                                                         src="instagram.png" width="32"
                                                                                         height="32" alt="Instagram"
                                                                                         title="instagram"
-                                                                                        style="display: block; height: auto; border: 0;"></a>
+                                                                                        style="display: block; height: auto; border: 0;" /></a>
                                                                             </td>
                                                                         </tr>
                                                                     </table>
