--- a/src/main/resources/mails/model.html
+++ b/src/main/resources/mails/model.html
@@ -362,7 +362,7 @@
                                                                             </th:block>
                                                                         </table>
                                                                         <p style="margin-top: 10px;">&#160;</p>
-                                                                        <table th:if="${assos!=null}"
+                                                                        <table th:if="${preTaxPriceTotal!=null}"
                                                                             style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;   color: #233d56; width:100%">
                                                                             <tr th:if="${preTaxPriceTotal!=null}">
                                                                                 <td colspan="4"
