--- a/src/main/resources/mails/publication-receipt.html
+++ b/src/main/resources/mails/publication-receipt.html
@@ -81,7 +81,7 @@
                 <td style="padding-left: 10px; padding-right : 10px; padding-top : 7px">
                     <table class="date-table full-width">
                         <tr>
-                            <td class="center">Journal du <span th:text="${date}"></span></td>
+                            <td class="center">www.jss.fr le <span th:text="${date}"></span></td>
                         </tr>
                     </table>
                 </td>
