--- a/src/main/resources/mails/model.html
+++ b/src/main/resources/mails/model.html
@@ -255,48 +255,6 @@
                                                                             <span style="font-size:16px;"
                                                                                 th:text="${explaination2}"></span>
                                                                         </p>
-                                                                        <p th:if="${paymentExplaination!=null}"
-                                                                            style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
-                                                                            <span
-                                                                                style="font-size:16px; white-space: pre"
-                                                                                th:text="${paymentExplaination}"></span>
-                                                                        </p>
-                                                                        <p th:if="${paymentExplaination2!=null}"
-                                                                            style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
-                                                                            <span style="font-size:16px;"
-                                                                                th:text="${paymentExplaination2}"></span>
-                                                                        </p>
-                                                                        <p th:if="${paymentExplainationWarning!=null}"
-                                                                            style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;color :#c0392b">
-                                                                            <strong><span style="font-size:16px;"><span
-                                                                                        th:text="${paymentExplainationWarning}"></span>
-                                                                                </span></strong>
-                                                                        </p>
-                                                                        <p th:if="${cbExplanation!=null}"
-                                                                            style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
-                                                                            <span style="font-size:16px;"
-                                                                                th:text="${cbExplanation}"></span><a
-                                                                                th:href="${cbLink}"
-                                                                                target="_blank">ici</a>.
-                                                                        </p>
-                                                                        <table class="image_block block-5" width="100%"
-                                                                            border="0" cellpadding="0" cellspacing="0"
-                                                                            role="presentation" th:if="${cbLink!=null}"
-                                                                            style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                                            <tr>
-                                                                                <td class="pad"
-                                                                                    style="width:100%;padding-right:0px;padding-left:0px;padding-top:0px;">
-                                                                                    <div class="alignment"
-                                                                                        align="center"
-                                                                                        style="line-height:10px"><img
-                                                                                            src="sample.png"
-                                                                                            th:src="|cid:${qrCodePicture}|"
-                                                                                            style="display: block; height: auto; border: 0;  "
-                                                                                            alt="" title="" />
-                                                                                    </div>
-                                                                                </td>
-                                                                            </tr>
-                                                                        </table>
                                                                         <table th:if="${assos!=null}"
                                                                             style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;   color: #233d56; width:100%">
                                                                             <th:block th:each="asso : ${assos}">
@@ -362,7 +320,7 @@
                                                                             </th:block>
                                                                         </table>
                                                                         <p style="margin-top: 10px;">&#160;</p>
-                                                                        <table th:if="${preTaxPriceTotal!=null}"
+                                                                        <table th:if="${assos!=null}"
                                                                             style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;   color: #233d56; width:100%">
                                                                             <tr th:if="${preTaxPriceTotal!=null}">
                                                                                 <td colspan="4"
@@ -435,7 +393,7 @@
                                                                             </tr>
                                                                         </table>
                                                                         <p
-                                                                            style="margin: 0; font-size: 16px; text-align: center; mso-line-height-alt: 16.8px;">
+                                                                            style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
                                                                             &#160;</p>
                                                                         <p th:if="${totalSubtitle!=null}"
                                                                             style="margin: 0; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
@@ -443,6 +401,48 @@
                                                                                     th:text="${totalSubtitle}"></span></span>
                                                                         </p>
                                                                     </div>
+                                                                </div>
+                                                                <div
+                                                                    style="font-size: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #233d56; line-height: 1.2;">
+                                                                    <p th:if="${paymentExplaination!=null}"
+                                                                        style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
+                                                                        <span style="font-size:16px; white-space: pre"
+                                                                            th:text="${paymentExplaination}"></span>
+                                                                    </p>
+                                                                    <p th:if="${paymentExplaination2!=null}"
+                                                                        style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
+                                                                        <span style="font-size:16px;"
+                                                                            th:text="${paymentExplaination2}"></span>
+                                                                    </p>
+                                                                    <p th:if="${paymentExplainationWarning!=null}"
+                                                                        style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;color :#c0392b">
+                                                                        <strong><span style="font-size:16px;"><span
+                                                                                    th:text="${paymentExplainationWarning}"></span>
+                                                                            </span></strong>
+                                                                    </p>
+                                                                    <p th:if="${cbExplanation!=null}"
+                                                                        style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
+                                                                        <span style="font-size:16px;"
+                                                                            th:text="${cbExplanation}"></span><a
+                                                                            th:href="${cbLink}" target="_blank">ici</a>.
+                                                                    </p>
+                                                                    <table class="image_block block-5" width="100%"
+                                                                        border="0" cellpadding="0" cellspacing="0"
+                                                                        role="presentation" th:if="${cbLink!=null}"
+                                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                                                                        <tr>
+                                                                            <td class="pad"
+                                                                                style="width:100%;padding-right:0px;padding-left:0px;padding-top:0px;">
+                                                                                <div class="alignment" align="center"
+                                                                                    style="line-height:10px"><img
+                                                                                        src="sample.png"
+                                                                                        th:src="|cid:${qrCodePicture}|"
+                                                                                        style="display: block; height: auto; border: 0;  "
+                                                                                        alt="" title="" />
+                                                                                </div>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
                                                                 </div>
                                                             </td>
                                                         </tr>
