--- a/src/main/resources/mails/publication-flag.html
+++ b/src/main/resources/mails/publication-flag.html
@@ -65,6 +65,22 @@
             right: 30px;
         }
 
+        .ql-align-right {
+            text-align: right;
+        }
+
+        .ql-align-center {
+            text-align: center;
+        }
+
+        .ql-align-left {
+            text-align: left;
+        }
+
+        .ql-align-justify {
+            text-align: justify;
+        }
+
         @page {
             size: A4 portrait;
 
@@ -84,8 +100,7 @@
 </head>
 
 <body>
-    <!--/*<a href="http://www.google.fr" target="_blank"><img th:src="@{'data:image/png;base64,'+${qrCodePicture}}"
-            width="60px" height="60px" class="qr-code" /></a>*/-->
+    <img th:src="@{'data:image/png;base64,'+${qrCodePicture}}" width="60px" height="60px" class="qr-code" />
     <div class="center blue-color">
         <div class="title">www.JSS.fr</div>
         <div class="subtitle">Service de Presse En Ligne d'informations Générales, Juridiques, Judiciaires et
@@ -103,7 +118,7 @@
                 th:text="${noticeSubtype}"></span></div>
     </div>
     <hr class="solid" />
-    <div th:if="${logo!=null}" class="alignment" align="center" style="line-height:10px"><img width="500px"
+    <div th:if="${logo!=null}" class="alignment" align="center" style="line-height:10px"><img style="max-width:500px"
             th:src="@{'data:image/jpeg;base64,'+${logo}}" /></div>
     <div th:if="${noticeHeader!=null}">
         <p class="text" th:utext="${noticeHeader}">header</p>
