--- a/src/main/resources/mails/invoice-page.html
+++ b/src/main/resources/mails/invoice-page.html
@@ -191,7 +191,7 @@
         </tr>
         <tr th:each="deposit : ${deposits}" th:if="${deposits.size()>0}">
             <td colspan="4" style="text-align: right">
-                Acompte
+                Acompte n°<span th:text="${deposit.id}"></span>
             </td>
             <td style="text-align: right;white-space: nowrap;" th:if="${deposit.originPayment!=null}"> - <span
                     th:text="${#numbers.formatDecimal(deposit.originPayment.paymentAmount,1,2)}"></span>
