--- a/src/main/resources/mails/publication-receipt.html
+++ b/src/main/resources/mails/publication-receipt.html
@@ -45,17 +45,17 @@
             text-align: center;
         }
 
-        table.table,
-        table.table>thead,
-        table.table>tbody,
-        table.table>thead>th,
-        table.table>tbody>tr>td,
-        table.table>tbody>tr {
+        table,
+        table>thead,
+        table>tbody,
+        table>thead>th,
+        table>tbody>tr>td,
+        table>tbody>tr {
             border: 1px solid;
             border-collapse: collapse;
         }
 
-        table.table>tbody>tr>td {
+        table>tbody>tr>td {
             padding: 5px;
         }
 
