--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,7 +15,7 @@
     src="https://jss-evo.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/1jmxwi/b/8/c95134bc67d3a521bb3f4331beb9b804/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=fr-FR&collectorId=eef2fc51"></script>
   <script type="text/javascript" src="assets/jiraBugReporter.js"></script>
   <script type="text/javascript">$('body').mousedown(function (e) { if (e.button == 1) return false });</script>
-
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
 
 <body class="mat-typography">
