--- a/src/main/resources/mails/model.html
+++ b/src/main/resources/mails/model.html
@@ -274,7 +274,7 @@
                                                                         <p th:if="${explaination2!=null}"
                                                                             style="margin-top:20px; font-size: 16px; text-align: center; mso-line-height-alt: 19.2px;">
                                                                             <span style="font-size:16px;"
-                                                                                th:text="${explaination2}"></span>
+                                                                                th:utext="${explaination2}"></span>
                                                                         </p>
                                                                         <table th:if="${assos!=null}"
                                                                             style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;   color: #233d56; width:100%">
