--- a/src/main/resources/mails/publication-flag.html
+++ b/src/main/resources/mails/publication-flag.html
@@ -105,7 +105,7 @@
         <div class="subtitle">Service de Presse En Ligne d'informations Générales, Juridiques, Judiciaires et
             Techniques, habilité à
             publier
-            les annonces légales</div>
+            les annonces légales les départements de 75, 78, 91, 92, 93, 94 et 95</div>
         <div class="type">Témoin de Publication</div>
         <table class="full-width blue-color table-notice">
             <tr>
